# humbler

./: .gitignore  Cargo.toml  README.md
core/: .env.test  .humbler.toml  Cargo.toml
core/src/: humbler.rs  main.rs  utils.rs
core/src/utils/: openapi.rs  option.rs
core/tests/: e2e.rs
core/tests/resources/: filtered_output.md  output.md
data/: pet.json
src/: config.rs  humbler.rs  lib.rs  main.rs  utils.rs
tests/: e2e.rs
tests/resources/: output.md
web/: Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js
web/src/: app.rs  main.rs
web/style/: main.scss
