[package]
name = "humbler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
indexmap = "2.7.0"
openapiv3 = "2.0.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
